--- a/FitsLibrary.Tests/FitsLibrary.Tests.csproj
+++ b/FitsLibrary.Tests/FitsLibrary.Tests.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\FitsLibrary\FitsLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="SampleFiles\*.fits">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
