--- a/FitsLibrary.Tests/FitsLibrary.Tests.csproj
+++ b/FitsLibrary.Tests/FitsLibrary.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Moq" Version="4.15.2" />
   </ItemGroup>
 
   <ItemGroup>
