--- a/FitsLibrary/FitsLibrary.csproj
+++ b/FitsLibrary/FitsLibrary.csproj
@@ -8,34 +8,34 @@
     <Authors>RononDex</Authors>
     <Company />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>0.1.0.0-pre</FileVersion>
-    <Version>0.1.0-pre</Version>
+    <FileVersion>0.1.1.0-pre</FileVersion>
+    <Version>0.1.1-pre</Version>
     <PackageReleaseNotes>
-        First pre-release, use at own risk
+        Added license to nuget package
     </PackageReleaseNotes>
     <PackageDescription>
-      FitsLibrary is a native C# / dotnet core implementation using the most up to date **FITS 4.0** specification for writing and reading astronomical FITS files.
+      FitsLibrary is a native C# / dotnet core implementation using the most up to date FITS 4.0 specification for writing and reading astronomical FITS files.
 
       The library focuses on being fast and easy to use.
-**This library has support for IoC (Inversion of Control), everything is implemented through interfaces**
+This library has support for IoC (Inversion of Control), everything is implemented through interfaces
 
-      # What currently works
+      What currently works
         - Loading of header data, including "CONTINUE" keywords for values spanning over multiple entries
         - Validation of header content
         - Reading of N-Dimensional data arrays
 
-      # What doesn't work
+      What doesn't work
         - Extension Headers
         - Writing .fits files
 
       For more information see the github repository ReadMe
     </PackageDescription>
     <PackageProjectUrl>https://github.com/RononDex/FitsLibrary</PackageProjectUrl>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageLicenseExpression>MPL-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="LICENSE.txt" Pack="true" PackagePath="LICENSE"/>
+    <None Include="../LICENSE" Pack="true" PackagePath="LICENSE"/>
   </ItemGroup>
 
   <ItemGroup>
