Add some ignore rules for C# Roslyn

--- a/.editorconfig
+++ b/.editorconfig
@@ -399,6 +399,10 @@ dotnet_naming_rule.parameters_rule.symbols              = parameters_group
 dotnet_naming_rule.parameters_rule.style                = camel_case_style
 dotnet_naming_rule.parameters_rule.severity             = warning
 
+# Roslyn settings
+csharp_using_directive_placement = outside_namespace:error
+dotnet_diagnostic.IDE0008.severity = none
+
 ##########################################
 # License
 ##########################################
