Further improve performance
Also add some quality of life improvements for more easier access to
data

--- a/.editorconfig
+++ b/.editorconfig
@@ -405,6 +405,8 @@ dotnet_diagnostic.IDE0008.severity = none
 dotnet_diagnostic.IDE0009.severity = none
 dotnet_diagnostic.IDE0021.severity = none
 dotnet_diagnostic.IDE0022.severity = none
+dotnet_diagnostic.IDE0058.severity = none
+dotnet_diagnostic.CC0079.severity = none
 dotnet_diagnostic.CSE0003.severity = none
 dotnet_diagnostic.CC0038.severity = none
 dotnet_diagnostic.CC0045.severity = silent
