--- a/FitsLibrary.Tests/FitsLibrary.Tests.csproj
+++ b/FitsLibrary.Tests/FitsLibrary.Tests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+    <PackageReference Include="CSharpFITS-rgw0" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
