Continued work on header serialization

--- a/.editorconfig
+++ b/.editorconfig
@@ -406,7 +406,7 @@ dotnet_diagnostic.IDE0008.severity = silent
 dotnet_diagnostic.IDE0009.severity = silent
 dotnet_diagnostic.IDE0021.severity = silent
 dotnet_diagnostic.IDE0022.severity = silent
-dotnet_diagnostic.IDE0058.severity = silent
+dotnet_diagnostic.IDE0058.severity = none
 dotnet_diagnostic.CC0079.severity = silent
 dotnet_diagnostic.CSE0003.severity = silent
 dotnet_diagnostic.CC0038.severity = silent
