--- a/FitsLibrary/FitsLibrary.csproj
+++ b/FitsLibrary/FitsLibrary.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>FitsLibrary</RootNamespace>
     <Nullable>enable</Nullable>
-    <LangVersion>10.0</LangVersion>
+    <LangVersion>latest</LangVersion>
 
     <Authors>RononDex</Authors>
     <Company />
